fix: deleting a newly created item from the store caused an error & added Delete shortcut for usability

--- a/src/Web/ItemEditor/MuItemStorage.razor
+++ b/src/Web/ItemEditor/MuItemStorage.razor
@@ -12,6 +12,7 @@
             Model="item"
             OnClick="async () => await this.SetSelectedItemAsync(item)"
             OnItemMoved="this.OnItemMovedAsync"
+            OnDelete="this.OnDelete"
             IsSelected="this.SelectedItem == item.Item"/>
     }
 </div>
